--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "@nestjs/typeorm": "^9.0.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
-    "myql": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
